Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/rare/Rare2.out
Rare2.java:20:14: compiler.err.improperly.formed.type.param.missing
1 error
